--- a/nuky-article/pom.xml
+++ b/nuky-article/pom.xml
@@ -12,39 +12,24 @@
 	<groupId>com.iamkyun</groupId>
 	<artifactId>nuky-article</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+
+	<packaging>pom</packaging>
+	<modules>
+		<module>nuky-article-api</module>
+		<module>nuky-article-data</module>
+		<module>nuky-article-service</module>
+	</modules>
+
 	<name>nuky-article</name>
 	<description>Article Service for Nuky</description>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Greenwich.SR3</spring-cloud.version>
+		<article-data.version>0.0.1-SNAPSHOT</article-data.version>
 	</properties>
-
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
 
 	<dependencyManagement>
 		<dependencies>
@@ -54,6 +39,11 @@
 				<version>${spring-cloud.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.iamkyun</groupId>
+				<artifactId>nuky-article-data</artifactId>
+				<version>${article-data.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
