--- a/nuky-eureka/src/main/resources/application.yml
+++ b/nuky-eureka/src/main/resources/application.yml
@@ -1,12 +1,9 @@
-server:
-  port: 8761
-
 eureka:
   instance:
     prefer-ip-address: true
-    hostname: localhost
+    hostname: eureka
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://localhost:8761/eureka/
