--- a/nuky-user/nuky-user-data/pom.xml
+++ b/nuky-user/nuky-user-data/pom.xml
@@ -5,14 +5,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.iamkyun</groupId>
-		<artifactId>nuky-article</artifactId>
+		<artifactId>nuky-user</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<artifactId>nuky-article-data</artifactId>
+	<artifactId>nuky-user-data</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>nuky-article-data</name>
-	<description>nuky-article-data</description>
+	<name>nuky-user-data</name>
+	<description>nuky-user-data</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -27,11 +27,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>com.iamkyun</groupId>
-			<artifactId>nuky-user-data</artifactId>
 		</dependency>
 
 		<dependency>
