--- a/nuky-user/pom.xml
+++ b/nuky-user/pom.xml
@@ -10,25 +10,24 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.iamkyun</groupId>
-	<artifactId>nuky-article</artifactId>
+	<artifactId>nuky-user</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 	<modules>
-		<module>nuky-article-api</module>
-		<module>nuky-article-data</module>
-		<module>nuky-article-service</module>
+		<module>nuky-user-api</module>
+		<module>nuky-user-data</module>
+		<module>nuky-user-service</module>
 	</modules>
 
-	<name>nuky-article</name>
-	<description>Article Service for Nuky</description>
+	<name>nuky-user</name>
+	<description>User Service for Nuky</description>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Greenwich.SR3</spring-cloud.version>
-		<article-data.version>0.0.1-SNAPSHOT</article-data.version>
 		<user-data.version>0.0.1-SNAPSHOT</user-data.version>
 	</properties>
 
@@ -40,11 +39,6 @@
 				<version>${spring-cloud.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>com.iamkyun</groupId>
-				<artifactId>nuky-article-data</artifactId>
-				<version>${article-data.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.iamkyun</groupId>
