--- a/nuky-article/nuky-article-service/pom.xml
+++ b/nuky-article/nuky-article-service/pom.xml
@@ -70,6 +70,10 @@
 			<groupId>com.iamkyun</groupId>
 			<artifactId>nuky-user-data</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.iamkyun</groupId>
+			<artifactId>nuky-user-api</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
