--- a/nuky-gateway/pom.xml
+++ b/nuky-gateway/pom.xml
@@ -10,28 +10,43 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.iamkyun</groupId>
-	<artifactId>nuky-article</artifactId>
+	<artifactId>nuky-gateway</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
-	<packaging>pom</packaging>
-	<modules>
-		<module>nuky-article-api</module>
-		<module>nuky-article-data</module>
-		<module>nuky-article-service</module>
-	</modules>
-
-	<name>nuky-article</name>
-	<description>Article Service for Nuky</description>
+	<name>nuky-gateway</name>
+	<description>Gateway for Nuky</description>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Greenwich.SR3</spring-cloud.version>
-		<article-data.version>0.0.1-SNAPSHOT</article-data.version>
-		<user-data.version>0.0.1-SNAPSHOT</user-data.version>
-		<user-api.version>0.0.1-SNAPSHOT</user-api.version>
 	</properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.junit.vintage</groupId>
+					<artifactId>junit-vintage-engine</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+	</dependencies>
 
 	<dependencyManagement>
 		<dependencies>
@@ -41,21 +56,6 @@
 				<version>${spring-cloud.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>com.iamkyun</groupId>
-				<artifactId>nuky-article-data</artifactId>
-				<version>${article-data.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.iamkyun</groupId>
-				<artifactId>nuky-user-data</artifactId>
-				<version>${user-data.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.iamkyun</groupId>
-				<artifactId>nuky-user-api</artifactId>
-				<version>${user-api.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -68,5 +68,13 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<repositories>
+		<repository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
+		</repository>
+	</repositories>
 
 </project>
