--- a/nuky-article/nuky-article-data/pom.xml
+++ b/nuky-article/nuky-article-data/pom.xml
@@ -30,6 +30,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-json</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>com.iamkyun</groupId>
 			<artifactId>nuky-user-data</artifactId>
 		</dependency>
