remove redundant methods

--- a/nuky-article/nuky-article-service/src/main/resources/bootstrap.yml
+++ b/nuky-article/nuky-article-service/src/main/resources/bootstrap.yml
@@ -12,3 +12,7 @@ spring:
         enabled: true
         service-id: CONFIG
       profile: dev
+  jpa:
+    properties:
+      hibernate:
+        for
