page query article

--- a/nuky-article/nuky-article-service/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/nuky-article/nuky-article-service/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -3,6 +3,7 @@
     {
       "name": "nuky.article.page-size",
       "type": "java.lang.Integer",
-      "description": "page size of articles query."
-  }
-] }
+      "description": "Description for nuky.article.page-size."
+    }
+  ]
+}
