--- a/nuky-post/nuky-post-model/pom.xml
+++ b/nuky-post/nuky-post-model/pom.xml
@@ -9,10 +9,10 @@
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<artifactId>nuky-post-data</artifactId>
+	<artifactId>nuky-post-model</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>nuky-post-data</name>
-	<description>nuky-post-data</description>
+	<name>nuky-post-model</name>
+	<description>nuky-post-model</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -36,7 +36,7 @@
 
 		<dependency>
 			<groupId>com.iamkyun</groupId>
-			<artifactId>nuky-user-data</artifactId>
+			<artifactId>nuky-user-model</artifactId>
 		</dependency>
 
 		<dependency>
