--- a/nuky-user/nuky-user-api/pom.xml
+++ b/nuky-user/nuky-user-api/pom.xml
@@ -27,7 +27,7 @@
 
 		<dependency>
 			<groupId>com.iamkyun</groupId>
-			<artifactId>nuky-user-data</artifactId>
+			<artifactId>nuky-user-model</artifactId>
 		</dependency>
 	</dependencies>
 
