--- a/nuky-post/pom.xml
+++ b/nuky-post/pom.xml
@@ -16,7 +16,6 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>nuky-post-api</module>
-		<module>nuky-post-model</module>
 		<module>nuky-post-service</module>
 	</modules>
 
@@ -44,12 +43,7 @@
 			</dependency>
 			<dependency>
 				<groupId>com.iamkyun</groupId>
-				<artifactId>nuky-post-model</artifactId>
-				<version>${post-data.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.iamkyun</groupId>
-				<artifactId>nuky-user-model</artifactId>
+				<artifactId>nuky-model</artifactId>
 				<version>${user-data.version}</version>
 			</dependency>
 			<dependency>
