--- a/nuky-post/nuky-post-api/pom.xml
+++ b/nuky-post/nuky-post-api/pom.xml
@@ -27,7 +27,7 @@
 
 		<dependency>
 			<groupId>com.iamkyun</groupId>
-			<artifactId>nuky-post-model</artifactId>
+			<artifactId>nuky-model</artifactId>
 		</dependency>
 	</dependencies>
 
