--- a/nuky-user/nuky-user-service/pom.xml
+++ b/nuky-user/nuky-user-service/pom.xml
@@ -63,7 +63,7 @@
 
         <dependency>
             <groupId>com.iamkyun</groupId>
-            <artifactId>nuky-user-model</artifactId>
+            <artifactId>nuky-model</artifactId>
         </dependency>
 
         <dependency>
