--- a/nuky-user/pom.xml
+++ b/nuky-user/pom.xml
@@ -16,7 +16,6 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>nuky-user-api</module>
-		<module>nuky-user-model</module>
 		<module>nuky-user-service</module>
 	</modules>
 
@@ -29,6 +28,7 @@
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Hoxton.SR1</spring-cloud.version>
 		<user-data.version>0.0.1-SNAPSHOT</user-data.version>
+		<post-data.version>0.0.1-SNAPSHOT</post-data.version>
 	</properties>
 
 	<dependencyManagement>
@@ -42,8 +42,8 @@
 			</dependency>
 			<dependency>
 				<groupId>com.iamkyun</groupId>
-				<artifactId>nuky-user-model</artifactId>
-				<version>${user-data.version}</version>
+				<artifactId>nuky-model</artifactId>
+				<version>${post-data.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
