--- a/nuky-comment/nuky-comment-service/pom.xml
+++ b/nuky-comment/nuky-comment-service/pom.xml
@@ -5,14 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.iamkyun</groupId>
-        <artifactId>nuky-post</artifactId>
+        <artifactId>nuky-comment</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <artifactId>nuky-post-service</artifactId>
+    <artifactId>nuky-comment-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>nuky-post-service</name>
-    <description>nuky-post-service</description>
+    <name>nuky-comment-service</name>
+    <description>nuky-comment-service</description>
 
     <dependencies>
         <dependency>
@@ -28,16 +28,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
 
         <dependency>
@@ -62,13 +52,18 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
 
         <dependency>
             <groupId>com.iamkyun</groupId>
-            <artifactId>nuky-post-model</artifactId>
+            <artifactId>nuky-comment-model</artifactId>
         </dependency>
 
         <dependency>
