--- a/nuky-comment/pom.xml
+++ b/nuky-comment/pom.xml
@@ -10,25 +10,25 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.iamkyun</groupId>
-    <artifactId>nuky-post</artifactId>
+    <artifactId>nuky-comment</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <packaging>pom</packaging>
     <modules>
-        <module>nuky-post-api</module>
-        <module>nuky-post-service</module>
-        <module>nuky-post-model</module>
+        <module>nuky-comment-api</module>
+        <module>nuky-comment-service</module>
+        <module>nuky-comment-model</module>
     </modules>
 
-    <name>nuky-post</name>
-    <description>post Service for Nuky</description>
+    <name>nuky-comment</name>
+    <description>Comment Service for Nuky</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
-        <post-model.version>0.0.1-SNAPSHOT</post-model.version>
+        <comment-model.version>0.0.1-SNAPSHOT</comment-model.version>
     </properties>
 
     <dependencyManagement>
@@ -42,8 +42,8 @@
             </dependency>
             <dependency>
                 <groupId>com.iamkyun</groupId>
-                <artifactId>nuky-post-model</artifactId>
-                <version>${post-model.version}</version>
+                <artifactId>nuky-comment-model</artifactId>
+                <version>${comment-model.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
