--- a/nuky-post/nuky-post-service/pom.xml
+++ b/nuky-post/nuky-post-service/pom.xml
@@ -76,6 +76,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.iamkyun</groupId>
+            <artifactId>nuky-common</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
