--- a/nuky-post/pom.xml
+++ b/nuky-post/pom.xml
@@ -29,6 +29,7 @@
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
         <post-model.version>0.0.1-SNAPSHOT</post-model.version>
+        <nuky-common.version>0.0.1-SNAPSHOT</nuky-common.version>
     </properties>
 
     <dependencyManagement>
@@ -44,6 +45,11 @@
                 <groupId>com.iamkyun</groupId>
                 <artifactId>nuky-post-model</artifactId>
                 <version>${post-model.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.iamkyun</groupId>
+                <artifactId>nuky-common</artifactId>
+                <version>${nuky-common.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
