--- a/nuky-comment/nuky-comment-service/pom.xml
+++ b/nuky-comment/nuky-comment-service/pom.xml
@@ -13,7 +13,9 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>nuky-comment-service</name>
     <description>nuky-comment-service</description>
-
+    <properties>
+        <mp.version>3.3.1</mp.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -23,11 +25,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
         <dependency>
@@ -54,6 +51,12 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>${mp.version}</version>
         </dependency>
 
         <dependency>
