--- a/nuky-comment/pom.xml
+++ b/nuky-comment/pom.xml
@@ -29,6 +29,7 @@
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
         <comment-model.version>0.0.1-SNAPSHOT</comment-model.version>
+        <mp.version>3.3.1</mp.version>
     </properties>
 
     <dependencyManagement>
@@ -39,6 +40,11 @@
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mp.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.iamkyun</groupId>
