--- a/nuky-comment/pom.xml
+++ b/nuky-comment/pom.xml
@@ -29,6 +29,7 @@
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
         <comment-model.version>0.0.1-SNAPSHOT</comment-model.version>
+        <nuky-common.version>0.0.1-SNAPSHOT</nuky-common.version>
         <mp.version>3.3.1</mp.version>
     </properties>
 
